[tool.poetry]
name = "azure-issues"
version = "0.1.0"
description = ""
authors = ["Guy Paterson-Jones <guy.paterson.jones@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
azure-identity = { version = "^1.7.0", optional = true }
azureml-core = { version = "^1.42.0", optional = true }
azureml-pipeline = { version = "^1.42.0", optional = true }
azure-mgmt-applicationinsights = { version = "^3.1.0", optional = true }
azure-mgmt-web = { version = "6.1.0", optional = true }
azure-mgmt-resource = { version = "^21.0.0", optional = true }
azure-mgmt-storage = { version = "^20.0.0", optional = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
